--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,10 +30,7 @@ jobs:
 
     - name: Install MoltenVK
       run: |
-        curl -LO https://github.com/KhronosGroup/MoltenVK/releases/download/v1.2.10/MoltenVK-macos.tar
-        tar xf MoltenVK-macos.tar
-        sudo mkdir -p /usr/local/lib
-        sudo cp MoltenVK/MoltenVK/dylib/macOS/libMoltenVK.dylib /usr/local/lib/libMoltenVK.dylib
+        brew install molten-vk
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_OSX_ARCHITECTURES=x86_64
@@ -45,7 +42,7 @@ jobs:
       run: |
         mkdir upload
         mv ${{github.workspace}}/build/shadps4 upload
-        cp /usr/local/lib/libMoltenVK.dylib upload
+        cp /opt/homebrew/opt/molten-vk/lib/libMoltenVK.dylib upload
         install_name_tool -add_rpath "@loader_path" upload/shadps4
         tar cf shadps4-macos.tar.gz -C upload .
 
