--- a/.github/workflows/windows-qt.yml
+++ b/.github/workflows/windows-qt.yml
@@ -29,8 +29,10 @@ jobs:
       uses: jurplel/install-qt-action@v4
       with:
         version: 6.7.2
+        host: windows
+        target: desktop
         arch: win64_msvc2019_64
-        archives: qtsvg qtbase
+        archives: qtbase
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
