--- a/.gitmodules
+++ b/.gitmodules
@@ -63,4 +63,4 @@
 	url = https://github.com/HowardHinnant/date.git
 [submodule "externals/ffmpeg-core"]
 	path = externals/ffmpeg-core
-	url = https://github.com/RPCS3/ffmpeg-core.git
+	url = https://github.com/shadps4-emu/ext-ffmpeg-core
