--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -547,7 +547,10 @@ set(EMULATOR src/emulator.cpp
 if(ENABLE_QT_GUI)
 qt_add_resources(RESOURCE_FILES src/shadps4.qrc)
 
-set(QT_GUI src/qt_gui/main_window_ui.h
+set(QT_GUI src/qt_gui/about_dialog.cpp
+           src/qt_gui/about_dialog.h
+           src/qt_gui/about_dialog.ui
+           src/qt_gui/main_window_ui.h
            src/qt_gui/main_window.cpp
            src/qt_gui/main_window.h
            src/qt_gui/gui_context_menus.h
