--- a/.github/workflows/windows-qt.yml
+++ b/.github/workflows/windows-qt.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         mkdir upload
         move build/Release/shadPS4.exe upload
-        move build/Release/translations/* upload
+        move build/translations upload
         windeployqt --dir upload upload/shadPS4.exe
 
     - name: Upload executable
