--- a/.github/workflows/linux-qt.yml
+++ b/.github/workflows/linux-qt.yml
@@ -34,8 +34,12 @@ jobs:
     - name: Run AppImage packaging script
       run:  ./.github/linux-appimage-qt.sh
 
+    - name: Retrieve Git Hash
+      id: git-hash
+      run: echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: shadps4-linux-qt
+        name: shadps4-linux-qt-${{ steps.git-hash.outputs.hash }}
         path: Shadps4-qt.AppImage
