--- a/.github/workflows/windows-qt.yml
+++ b/.github/workflows/windows-qt.yml
@@ -41,9 +41,16 @@ jobs:
         mkdir upload
         move build/Release/shadPS4.exe upload
         windeployqt --dir upload upload/shadPS4.exe
+        
+    - name: Retrieve Git Hash
+      id: git-hash
+      shell: cmd
+      run: |
+        FOR /F "tokens=*" %%g IN ('git rev-parse --short HEAD') do (SET HASH=%%g)
+        echo hash=%HASH% >> %GITHUB_OUTPUT%
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: shadps4-win64-qt
+        name: shadps4-win64-qt-${{ steps.git-hash.outputs.hash }}
         path: upload
