--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,9 +26,16 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel
 
+    - name: Retrieve Git Hash
+      id: git-hash
+      shell: cmd
+      run: |
+        FOR /F "tokens=*" %%g IN ('git rev-parse --short HEAD') do (SET HASH=%%g)
+        echo hash=%HASH% >> %GITHUB_OUTPUT%
+
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: shadps4-win64-sdl
+        name: shadps4-win64-sdl-${{ steps.git-hash.outputs.hash }}
         path: |
           ${{github.workspace}}/build/Release/shadPS4.exe
