--- a/.github/workflows/linux-qt.yml
+++ b/.github/workflows/linux-qt.yml
@@ -34,12 +34,14 @@ jobs:
     - name: Run AppImage packaging script
       run:  ./.github/linux-appimage-qt.sh
 
-    - name: Retrieve Git Hash
-      id: git-hash
-      run: echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+    - name: Get date and git hash
+      id: vars
+      run: |
+        echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        echo "shorthash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: shadps4-linux-qt-${{ steps.git-hash.outputs.hash }}
+        name: shadps4-linux-qt-${{ steps.vars.outputs.date }}-${{ steps.vars.outputs.shorthash }}
         path: Shadps4-qt.AppImage
