--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -45,12 +45,14 @@ jobs:
         install_name_tool -add_rpath "@loader_path" upload/shadps4
         tar cf shadps4-macos-sdl.tar.gz -C upload .
 
-    - name: Retrieve Git Hash
-      id: git-hash
-      run: echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+    - name: Get date and git hash
+      id: vars
+      run: |
+        echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        echo "shorthash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
     - name: Upload executable
       uses: actions/upload-artifact@v4
       with:
-        name: shadps4-macos-sdl-${{ steps.git-hash.outputs.hash }}
+        name: shadps4-macos-sdl-${{ steps.vars.outputs.date }}-${{ steps.vars.outputs.shorthash }}
         path: shadps4-macos-sdl.tar.gz
