--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -737,3 +737,8 @@ if (ENABLE_QT_GUI)
     set_source_files_properties(src/images/shadPS4.icns PROPERTIES
         MACOSX_PACKAGE_LOCATION Resources)
 endif()
+
+if (ENABLE_QT_GUI)
+    find_package(OpenSSL REQUIRED)
+    target_link_libraries(shadps4 PRIVATE ${OPENSSL_LIBRARIES})
+endif()
