--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -738,7 +738,9 @@ if (ENABLE_QT_GUI)
         MACOSX_PACKAGE_LOCATION Resources)
 endif()
 
-if (ENABLE_QT_GUI)
-    find_package(OpenSSL REQUIRED)
-    target_link_libraries(shadps4 PRIVATE ${OPENSSL_LIBRARIES})
+if (UNIX AND NOT APPLE)
+    if (ENABLE_QT_GUI)
+        find_package(OpenSSL REQUIRED)
+        target_link_libraries(shadps4 PRIVATE ${OPENSSL_LIBRARIES})
+    endif()
 endif()
