[libSceAudio3d] Initialize Audio3d Library (#761)
* init libSceAudio3d

* complete header and func params

* clang

* rm incl

* incl stddef

* revert module num

* print params

* correct logs

* clang

---------

Co-authored-by: microsoftv <6063922+microsoftv@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,6 +260,11 @@ set(SYSTEM_LIBS src/core/libraries/system/commondialog.cpp
                 src/core/libraries/ngs2/ngs2_impl.cpp
                 src/core/libraries/ngs2/ngs2_impl.h
                 src/core/libraries/ajm/ajm_error.h
+                src/core/libraries/audio3d/audio3d.cpp
+                src/core/libraries/audio3d/audio3d.h
+                src/core/libraries/audio3d/audio3d_error.h
+                src/core/libraries/audio3d/audio3d_impl.cpp
+                src/core/libraries/audio3d/audio3d_impl.h
 )
 
 set(VIDEOOUT_LIB src/core/libraries/videoout/buffer.h
