--- a/.github/workflows/linux-qt.yml
+++ b/.github/workflows/linux-qt.yml
@@ -23,7 +23,13 @@ jobs:
 
     - name: Install misc packages
       run: >
-       sudo apt-get update && sudo apt install libx11-dev libxext-dev libwayland-dev libfuse2 clang build-essential qt6-base-dev qt6-tools-dev
+       sudo apt-get update && sudo apt install libx11-dev libxext-dev libwayland-dev libfuse2 clang build-essential
+    
+    - name: Setup Qt
+      uses: jurplel/install-qt-action@v4
+      with:
+        arch: linux_gcc_64
+        version: 6.7.1
 
     - name: Cache CMake dependency source code
       uses: actions/cache@v4
