--- a/.github/workflows/macos-qt.yml
+++ b/.github/workflows/macos-qt.yml
@@ -40,10 +40,10 @@ jobs:
         arch: clang_64
         archives: qtbase qttools
 
-    - name: Cache CMake dependency source code
+    - name: Cache CMake Configuration
       uses: actions/cache@v4
       env:
-          cache-name: ${{ runner.os }}-qt-cache-cmake-dependency-sources
+          cache-name: ${{ runner.os }}-qt-cache-cmake-configuration
       with:
           path: | 
             ${{github.workspace}}/build
@@ -51,10 +51,10 @@ jobs:
           restore-keys: |
             ${{ env.cache-name }}-
 
-    - name: Cache CMake dependency build objects
+    - name: Cache CMake Build
       uses: hendrikmuhs/ccache-action@v1.2.14
       env:
-          cache-name: ${{runner.os}}-qt-cache-cmake-dependency-builds
+          cache-name: ${{runner.os}}-qt-cache-cmake-build
       with:
         append-timestamp: false
         create-symlink: true
