--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -31,10 +31,10 @@ jobs:
         arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
         arch -x86_64 /usr/local/bin/brew install molten-vk
 
-    - name: Cache CMake dependency source code
+    - name: Cache CMake Configuration
       uses: actions/cache@v4
       env:
-          cache-name: ${{ runner.os }}-sdl-cache-cmake-dependency-sources
+          cache-name: ${{ runner.os }}-sdl-cache-cmake-configuration
       with:
           path: | 
             ${{github.workspace}}/build
@@ -42,10 +42,10 @@ jobs:
           restore-keys: |
             ${{ env.cache-name }}-
 
-    - name: Cache CMake dependency build objects
+    - name: Cache CMake Build
       uses: hendrikmuhs/ccache-action@v1.2.14
       env:
-          cache-name: ${{runner.os}}-sdl-cache-cmake-dependency-builds
+          cache-name: ${{runner.os}}-sdl-cache-cmake-build
       with:
         append-timestamp: false
         create-symlink: true
