--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,6 +113,7 @@ jobs:
         target: desktop
         arch: win64_msvc2019_64
         archives: qtbase qttools
+        modules: qtmultimedia
 
     - name: Cache CMake Configuration
       uses: actions/cache@v4
@@ -237,6 +238,7 @@ jobs:
         target: desktop
         arch: clang_64
         archives: qtbase qttools
+        modules: qtmultimedia
         
     - name: Cache CMake Configuration
       uses: actions/cache@v4 
@@ -341,7 +343,7 @@ jobs:
         submodules: recursive
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt install -y libx11-dev libxext-dev libwayland-dev libfuse2 clang build-essential qt6-base-dev qt6-tools-dev
+      run: sudo apt-get update && sudo apt install -y libx11-dev libxext-dev libwayland-dev libfuse2 clang build-essential qt6-base-dev qt6-tools-dev qt6-multimedia-dev
 
     - name: Cache CMake Configuration
       uses: actions/cache@v4 
