--- a/REUSE.toml
+++ b/REUSE.toml
@@ -10,10 +10,7 @@ path = [
     ".gitmodules", 
     "documents/changelog.txt", 
     "documents/Quickstart/2.png", 
-    "documents/Screenshots/Bloodborne.png", 
-    "documents/Screenshots/Sonic Mania.png", 
-    "documents/Screenshots/Undertale.png",
-    "documents/Screenshots/We are DOOMED.png", 
+    "documents/Screenshots/*", 
     "scripts/ps4_names.txt", 
     "src/images/about_icon.png", 
     "src/images/controller_icon.png",
